@@ -1,6 +1,7 @@
 Next version
 
 Changed: Winner screen can be left with 3rd joystick button (#2121895).
+Changed: Parameter --use-appdata-dir replaced by --ignore-home-dir on Linux. On Windows it's still --use-appdata-dir.
 
 
 ----------------------------
